# SNREDBridge

./: .gitignore  CMakeLists.txt  README.md  snrs_cmake_backup.cmake
cmake/: BxPackageVersions.db  LPCCMakeSettings.cmake  LPCCMakeUtilities.cmake  SNREDBridgeConfig.cmake.in  SNREDBridgeConfigVersion.cmake.in  SNREDBridgeDependencies.cmake  snred_bridge-config.in  snrs-config.in
doc/: CMakeLists.txt
programs/: CMakeLists.txt  CMakeLists_backup.txt  red_bridge.cxx  red_bridge_validation.cxx
scripts/: README.rst  multi_launch_redbridge_cclyon.sh  my_snredbridge.txt  redbridge_cclyon.sh
source/: CMakeLists.txt
source/snredbridge/: CMakeLists.txt  exception.h  resource_files.cc.in  resource_files.h  service.cc  service.h  snredbridge.cc.in  snredbridge.h  snredbridge_binreloc.c  snredbridge_config.h.in  snredbridge_library.cc  snredbridge_library.h  version.cc  version.h.in
source/snredbridge/testing/: CMakeLists.txt  test-snredbridge.cxx
tools/: build.bash  clean.bash
